--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -186,31 +186,51 @@
             <!-- slideshow -->
             <div class="carousel-inner">
               <div class="item active">
-                <img src="/assets/images/disneyland.png" alt="Disney Land">
+                <img src="/assets/images/dest_Boston.png" alt="Boston">
                   <div class="carousel-caption">
-                      <h3>Disney Land</h3>
-                      <p>Have a blast at Disney Land</p>
+                      <h3>Boston</h3>
+                      <p>City in Massachusetts</p>
+                      <a href="#">See here</a>
                   </div>
               </div>
               <div class="item">
-                <img src="/assets/images/grandcanyon.png" alt="Grand Canyon">
+                <img src="/assets/images/dest_chicago.png" alt="Chicago">
                   <div class="carousel-caption">
-                      <h3>Grand Canyon</h3>
-                      <p>Enjoy the grandeur</p>
+                      <h3>Chicago</h3>
+                      <p>City in Illinois</p>
+                      <a href="#">See here</a>
                   </div>
               </div>
               <div class="item">
-                <img src="/assets/images/statecapitol.png" alt="State Capitol">
+                <img src="/assets/images/Dest_goldengate.png" alt="San Francisco">
                   <div class="carousel-caption">
-                      <h3>Texas State Capitol</h3>
-                      <p>Explore Texas's history</p>
+                      <h3>San Francisco</h3>
+                      <p>City in California</p>
+                      <a href="#">See here</a>
                   </div>
               </div>
               <div class="item">
-                <img src="/assets/images/spaceneedle.png" alt="space needle">
+                <img src="/assets/images/dest_miami.png" alt="Miami image">
                   <div class="carousel-caption">
-                      <h3>Space Needle Seattle</h3>
-                      <p>Enjoy the scenic beauty</p>
+                      <h3>Miami</h3>
+                      <p>City in Florida</p>
+                      <a href="#">See here</a>
+                  </div>
+              </div>
+              <div class="item">
+                <img src="/assets/images/dest_neworleans.png" alt="New Orleans image">
+                  <div class="carousel-caption">
+                      <h3>New Orleans</h3>
+                      <p>City in Lousiana</p>
+                      <a href="#">See here</a>
+                  </div>
+              </div>
+              <div class="item">
+                <img src="/assets/images/dest_washington_dc.png" alt="Washington DC image">
+                  <div class="carousel-caption">
+                      <h3>Washington D.C.</h3>
+                      <p>District of Columbia</p>
+                      <a href="#">See here</a>
                   </div>
               </div>
             </div>
