--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -96,7 +96,7 @@
       <div  class="row dest-format">
       <div class="col-md-4 col-sm-6 col-12" style="color: #555;" *ngFor="let book of books">
           <div class="card-body">
-          <img bind-src="book.publisher" alt="image of added destination"/>
+          <img bind-src="book.publisher" alt="image of added destination" class="img-fluid"/>
           <h3 class="card-title mt-2">{{ book.isbn }}</h3>
           <h5 class="card-subtitle">{{ book.author }}</h5>
           </div>
