--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -32,7 +32,10 @@ color: #000 !important;
 }
 
 .card-body {
-  border: 1px solid #0000ff
+  border: 1px solid #0000ff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  
 }
 
 
