--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -99,6 +99,7 @@
           <img bind-src="book.publisher" alt="image of added destination" class="img-fluid"/>
           <h3 class="card-title mt-2">{{ book.isbn }}</h3>
           <h5 class="card-subtitle">{{ book.author }}</h5>
+          <h5 class="card-subtitle">{{ book.title }}</h5>
           </div>
           <br>
       </div>
