--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,3 +1,17 @@
+
+
+body , html {
+
+
+	font-size: 1.5em;
+	font-family: 'Lato', 'sans-serif';
+	font-weight: 400;
+	line-height: 1.4em;
+	color: #666;
+
+}
+
+
 /*************** navigation style ***********************/
 .nav-link {
   font-size: 2em;
