--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -54,9 +54,11 @@
       
        <div class="container">
         <h1>Destination List</h1>
-        <p>Add destinations</p><a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
-          <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
-        </a>
+        
+        <div class="h2">
+            <span class="glyphicon glyphicon-plus"></span>
+            Add Destinations
+          </div>
                     
         <table class="table table-bordered">
           <thead>
@@ -98,8 +100,8 @@
           <div class="card-body">
           <img bind-src="book.publisher" alt="image of added destination" class="img-fluid"/>
           <h3 class="card-title mt-2">{{ book.isbn }}</h3>
-          <h5 class="card-subtitle">{{ book.author }}</h5>
-          <h5 class="card-subtitle">{{ book.title }}</h5>
+          <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
+          <h5 class="card-subtitle mt-2">{{ book.title }}</h5>
           </div>
           <br>
       </div>
