--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -55,11 +55,11 @@
        <div class="container">
         <h1>Destination List</h1>
         
-        <div class="h2">
+        <h2>Add Destinations
             <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
-            <span class="glyphicon glyphicon-plus"></span>
-            Add Destinations
-          </div>
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            </a>
+          </h1>
                     
         <table class="table table-bordered">
           <thead>
