--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -99,7 +99,7 @@
       <div  class="row dest-format">
       <div class="col-md-4 col-sm-6 col-12 d-flex align-items-stretch mb-5" style="color: #555;" *ngFor="let book of books">
           <div class="card-body">
-          <img bind-src="book.publisher" alt="image of added destination" class="img-fluid"/>
+          <img bind-src="book.publisher" style="width:300px; height:200px" alt="image of added destination" class="img-fluid"/>
           <h3 class="card-title mt-2">{{ book.isbn }}</h3>
           <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
           <h5 class="card-subtitle mt-2">{{ book.title }}</h5>
