--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -64,8 +64,8 @@
         <table class="table table-bordered">
           <thead>
             <tr>
-              <th>Destination Name</th>
-              <th>Destination Location</th>
+              <th>Destination City</th>
+              <th>Destination Activity</th>
               <th>Destination Budget</th>
             </tr>
           </thead>
@@ -79,30 +79,14 @@
           </tbody>
         </table>
      
-         <!--     
-      
-        <div class="row">
-        
-            <div class="col-sm-4 col-sm-4 col-sm-4">
-          <div class="card mb-5 bg-light"  style="color: #555;" *ngFor="let book of books">
-              
-              <div class="card-body"> 
-                  <img bind-src="book.publisher" alt="picture of added location" class="img-fluid"/>
-                  <h3 class="card-title mt-2">{{ book.isbn }}</h3>
-                  <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
-                  <h5 class="card-subtitle mt-2">{{ book.title }}</h5> 
-          </div>
-          </div>
-        
-     </div>-->
      <div class="portfolio-items">
       <div  class="row dest-format">
       <div class="col-md-4 col-sm-6 col-12 d-flex align-items-stretch mb-5" style="color: #555;" *ngFor="let book of books">
           <div class="card-body">
           <img bind-src="book.publisher" style="width:300px; height:200px" alt="image of added destination" class="img-fluid"/>
-          <h3 class="card-title mt-2">{{ book.isbn }}</h3>
-          <h5 class="card-subtitle mt-2">{{ book.author }}</h5>
-          <h5 class="card-subtitle mt-2">{{ book.title }}</h5>
+          <h3 class="card-title mt-2">Destination City: {{ book.isbn }}</h3>
+          <h5 class="card-subtitle mt-2">Budget: {{ book.author }}</h5>
+          <h5 class="card-subtitle mt-2">Activity: {{ book.title }}</h5>
           </div>
           <br>
       </div>
