--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -128,7 +128,7 @@
                            
                                 
                                 <div class="submit-button">
-                                    <input type="submit" value="Save" [disabled]="!bookForm.form.valid">
+                                  <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                                 </div>
                                 
                     </form>
@@ -187,7 +187,7 @@
                                     <label>&nbsp;</label>
                                 
                                     <div class="submit-button">
-                                        <input type="submit" value="Save" [disabled]="!bookForm.form.valid">
+                                      <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                                     </div>
                     </form>
                 
