--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -128,7 +128,7 @@
                                 <label>&nbsp;</label>
                            
                                 
-                                <div class="submit-button">
+                                <div class="form-group">
                                   <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                                 </div>
                                 
